UtahLiveDataTest/src/objects/Grant__c.object
<CustomObject>
    <fields>
        <fullName>TotalGrantAmount__c</fullName>
        <formula>TotalAdjustedAmount__c + TotalOriginalGrantAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Grant Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalObligatedAmount__c</fullName>
        <description>This saves latest awards total Obligated amount</description>
        <label>Total Obligated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOriginalGrantAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Original Grant Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProjectFundingAmount__c</fullName>
        <label>Total Project Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRemainingAmount__c</fullName>
        <description>This Calculates Total Remaining Amount of Latest Award and stored at Grant Level.</description>
        <label>Total Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TypeOfBudgetCategories__c</fullName>
        <description>This field is used in Grant Creation</description>
        <label>Type Of Budget Categories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TypeOfBudgetCategories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>USBEPathway__c</fullName>
        <label>USBEPathway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRoleName__c</fullName>
        <formula>$UserRole.Name</formula>
        <label>UserRoleName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zipcode</label>
        <referenceTo>USDemographicInfo__c</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>grantEditDecision__c</fullName>
        <formula>OR((IF(OwnerId != $User.Id, TRUE, FALSE) &amp;&amp; $User.IsExternalUser__c=false),($User.IsExternalUser__c=true &amp;&amp; $User.IsKeyContact__c=false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>grantEditDecision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isClosedOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if the Grant is eligible for Closeout</description>
        <label>isClosedOut</label>
        <type>Checkbox</type>
    </fields>
    <label>Grant</label>
    <listViews>
        <fullName>SubQueue001t000000Bk2DZAAZ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DZAAZ</label>
        <queue>SubQueue001t000000Bk2DZAAZ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DaAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DaAAJ</label>
        <queue>SubQueue001t000000Bk2DaAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DbAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DbAAJ</label>
        <queue>SubQueue001t000000Bk2DbAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DcAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DcAAJ</label>
        <queue>SubQueue001t000000Bk2DcAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DdAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DdAAJ</label>
        <queue>SubQueue001t000000Bk2DdAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DeAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DeAAJ</label>
        <queue>SubQueue001t000000Bk2DeAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DfAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DfAAJ</label>
        <queue>SubQueue001t000000Bk2DfAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DgAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DgAAJ</label>
        <queue>SubQueue001t000000Bk2DgAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DhAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DhAAJ</label>
        <queue>SubQueue001t000000Bk2DhAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DiAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DiAAJ</label>
        <queue>SubQueue001t000000Bk2DiAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DjAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DjAAJ</label>
        <queue>SubQueue001t000000Bk2DjAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DkAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DkAAJ</label>
        <queue>SubQueue001t000000Bk2DkAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DlAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DlAAJ</label>
        <queue>SubQueue001t000000Bk2DlAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DmAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DmAAJ</label>
        <queue>SubQueue001t000000Bk2DmAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SubQueue001t000000Bk2DnAAJ_Grant</fullName>
        <filterScope>Queue</filterScope>
        <label>SubQueue001t000000Bk2DnAAJ</label>
        <queue>SubQueue001t000000Bk2DnAAJ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <recordTypes>
        <fullName>Grantee</fullName>
        <active>true</active>
        <label>Grantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grantor</fullName>
        <active>true</active>
        <label>Grantor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Family__c</fullName>
        <label>Family</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Guest__c</fullName>
        <label>Guest</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Home__c</fullName>
        <label>Home</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OwnerReplacement__c</fullName>
        <label>Owner Replacement</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoExternalPOC__c</fullName>
        <label>Share to External POC</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoGrantMonitor__c</fullName>
        <label>Share to Grant Monitor</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoGrantsManager__c</fullName>
        <label>Share to Grants Manager</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoProjectOfficer__c</fullName>
        <label>Share to Project Officer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharingforReviewandApproval__c</fullName>
        <label>SharingforReviewandApproval</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Sibling__c</fullName>
        <label>Sibling</label>
    </sharingReasons>
    <validationRules>
        <fullName>Grant_Issue_date_Validation_Rule</fullName>
        <active>false</active>
        <description>Grant issue date should be earlier than project start date</description>
        <errorConditionFormula>IssueDate__c &gt; ProjectPeriodStartDate__c</errorConditionFormula>
        <errorMessage>Grant issue date should be earlier than project start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProjectPeriodEndDateGreaterThanStartDate</fullName>
        <active>true</active>
        <description>Project Period Start date cannot be greater than Project Period End Date</description>
        <errorConditionFormula>ProjectPeriodStartDate__c  &gt;  ProjectPeriodEndDate__c</errorConditionFormula>
        <errorMessage>Project Period Start Date Should be less than Project Period End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SpendPercentCannotBeGreaterThan100Percnt</fullName>
        <active>true</active>
        <errorConditionFormula>SumOfSpendPercent__c  &gt; 1</errorConditionFormula>
        <errorMessage>Spend% sum cannot be greater than 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TestMSPValidation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ObjectCode__c = &apos;461&apos;)</errorConditionFormula>
        <errorMessage>Error 457</errorMessage>
    </validationRules>
</CustomObject>